--- a/my-first-web-page.html
+++ b/my-first-web-page.html
@@ -5,5 +5,8 @@
 </head>
 <body>
     <h1>My Page Headline</h1>
+        <p>Name: Jeremy Batista</p>
+        <p>Course Number: IS117-102</p>
+        <p>Intro to web development</p>
 </body>
 </html>
